--- a/section3/package.json
+++ b/section3/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
-    "validator": "^13.15.26"
+    "validator": "^13.15.26",
+    "yargs": "^12.0.5"
   }
 }
