--- a/web-server/package.json
+++ b/web-server/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.22.1"
+    "express": "^4.22.1",
+    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0"
   }
 }
