remove package.json and package-lock.json from node_developer directory and add request dependency to right project

--- a/web-server/package.json
+++ b/web-server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
@@ -14,6 +15,7 @@
   "dependencies": {
     "express": "^4.22.1",
     "handlebars": "^4.7.8",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "request": "^2.88.2"
   }
 }
