add validator to the dependencies and set some validations for our schemas

--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^7.1.0",
-    "mongoose": "^9.2.2"
+    "mongoose": "^9.2.2",
+    "validator": "^13.15.26"
   }
 }
