--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:watch": "node --watch src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^5.2.1",
     "mongodb": "^7.1.0",
     "mongoose": "^9.2.2",
     "validator": "^13.15.26"
