--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "mongodb": "^7.1.0",
     "mongoose": "^9.2.2",
