--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.1.0",
     "mongoose": "^9.2.2",
+    "multer": "^2.1.0",
     "validator": "^13.15.26"
   }
 }
