--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^7.1.0",
     "mongoose": "^9.2.2",
     "multer": "^2.1.0",
+    "sharp": "^0.34.5",
     "validator": "^13.15.26"
   }
 }
